# arbitrage-bot

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  Package.resolved  Package.swift  botconfig.json  config.py  package.json
arbitrage-server/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Package.resolved  Package.swift  create_zig_symlink.sh  docker-compose.yml  makefile
arbitrage-server/Sources/App/: configure.swift  routes.swift
arbitrage-server/Sources/App/Controllers/Exchanges/: UniswapV2.swift
arbitrage-server/Sources/App/Controllers/Server/: PriceDataController.swift  PriceDataFeedController.swift  (+3 more)
arbitrage-server/Sources/App/Global/: Credentials.swift  Exchanges.swift  Pairs.swift
arbitrage-server/Sources/App/Utils/: EthereumAddress.swift
arbitrage-server/Sources/Arbitrer/: ArbitrerInterface.swift
arbitrage-server/Sources/Arbitrer/Controller/: RealtimeServerController.swift
arbitrage-server/Sources/Arbitrer/Global/: Credentials.swift  Environment.swift  Exchanges.swift  Pairs.swift
arbitrage-server/Sources/Arbitrer/Utils/: BigInt+Typealias.swift  EthereumAddress.swift
arbitrage-server/Sources/PriceDataStore/: adjacency_list.cpp  big_integer.cpp  big_integer_sign.cpp  build.zig  main.c  module.modulemap
arbitrage-server/Sources/PriceDataStore/include/: PriceDataStore.h  adjacency_list.hpp  big_integer.hpp  big_integer_sign.hpp
arbitrage-server/Sources/PriceDataStore/product/: price_data_store.h  zig.h
arbitrage-server/Sources/PriceDataStore/src/: main.zig
arbitrage-server/Tests/AppTests/: AppTests.swift
(+258 files in other folders)
